@@ -41,6 +41,7 @@ public class Member {
         validateEmail(request.email());
         validatePhoneNumber(request.phoneNumber());
         validateLoginId(request.loginId());
+        validatePassword(request.password());
 
         return new Member(
                 request.loginId(),
@@ -67,7 +68,7 @@ public class Member {
     }
 
     private static void validateLoginId(String loginId) {
-        if (loginId == null || loginId.trim().isEmpty()) {
+        if (loginId == null || loginId.isBlank()) {
             throw new IllegalArgumentException("로그인 ID는 필수 입력 항목입니다.");
         }
         if (loginId.length() > MemberConstants.LOGIN_ID_MAX_LENGTH) {
@@ -75,6 +76,21 @@ public class Member {
         }
         if (loginId.length() < MemberConstants.LOGIN_ID_MIN_LENGTH) {
             throw new IllegalArgumentException("로그인 ID는 5자 이상이어야 합니다.");
+        }
+    }
+
+    private static void validatePassword(String password) {
+        if (password == null || password.isBlank()) {
+            throw new IllegalArgumentException("비밀번호는 필수 입력 항목입니다.");
+        }
+        if (password.length() < MemberConstants.PASSWORD_MIN_LENGTH) {
+            throw new IllegalArgumentException("비밀번호는 8자 이상이어야 합니다.");
+        }
+        if (password.length() > MemberConstants.PASSWORD_MAX_LENGTH) {
+            throw new IllegalArgumentException("비밀번호는 50자를 초과할 수 없습니다.");
+        }
+        if (!Pattern.matches(MemberConstants.PASSWORD_REGEX, password)) {
+            throw new IllegalArgumentException("비밀번호는 8~50자의 영문, 숫자, 특수문자를 포함해야 합니다.");
         }
     }
 }
